--- a/src/Styles/DoctorPrescription.css
+++ b/src/Styles/DoctorPrescription.css
@@ -31,10 +31,26 @@
 
 .prescription-title {
   text-align: center;
-  margin-bottom: 1.5rem;
+  margin-bottom: 35px;
   font-size: 1.8rem;
   color: var(--surgical-green);
   font-weight: 600;
+  font-size: 32px;
+  position: relative;
+  padding-bottom: 12px;
+}
+
+/* DO NOT CHANGE ANYTHING OTHER THAN THE LINE BELOW HEADING */
+.prescription-title::after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 100px;
+  height: 4px;
+  background: linear-gradient(to right, var(--surgical-green-light), var(--surgical-green));
+  border-radius: 2px;
 }
 
 .subheading {
