--- a/src/Styles/Login.css
+++ b/src/Styles/Login.css
@@ -1,68 +1,64 @@
-html, body {
-    height: 100%;
-    margin: 0;
-    font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
-}
-
-body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
 .login-container {
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    width: 100%;
-    max-width: 400px;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
+  background-color: #fff;
+  max-width: 400px;
+  margin: 25vh auto;
+  padding: 40px;
+  border-radius: 8px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  font-family: 'Arial', sans-serif;
+  text-align: center;
 }
 
-.login-container h2 {
-    margin-bottom: 20px;
+.login-title {
+  color: #333;
+  margin-bottom: 30px;
 }
 
-.login-container .button-group {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    width: 100%;
+.login-button-group {
+  display: flex;
+  justify-content: space-between;
+  gap: 40px;
+  margin-top: 50px;
+  margin-bottom: 20px;
 }
 
-.login-container button {
-    background-color: #2e8b57; /* Surgical green color */
-    color: #fff;
-    border: none;
-    padding: 10px 20px;
-    margin: 10px 0;
-    border-radius: 4px;
-    cursor: pointer;
-    width: 100%;
+.login-button-group button {
+  flex: 1;
+  background-color: #33b48b;
+  color: #fff;
+  border: none;
+  padding: 10px;
+  border-radius: 5px;
+  font-size: 1rem;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
 }
 
-.login-container button:hover {
-    background-color: #276b47; /* Darker surgical green on hover */
+.login-button-group button:hover {
+  background-color: #2a9d7a;
 }
 
-.login-container input {
-    width: 100%;
-    padding: 10px;
-    margin: 10px 0;
-    border: 1px solid #ccc;
-    border-radius: 4px;
+.login-admin-form input {
+  width: 94%;
+  padding: 10px;
+  margin: 10px 0;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-size: 1rem;
 }
 
-.admin-login {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100%;
+.login-admin-form button {
+  width: 100%;
+  background-color: #33b48b;
+  color: #fff;
+  border: none;
+  padding: 10px;
+  border-radius: 5px;
+  font-size: 1rem;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.login-admin-form button:hover {
+  background-color: #2a9d7a;
 }
