--- a/src/Styles/Login.css
+++ b/src/Styles/Login.css
@@ -62,3 +62,8 @@
 .login-admin-form button:hover {
   background-color: #2a9d7a;
 }
+
+.login-heading {
+  margin-bottom: 1.5rem;
+  text-align: center;
+}
